--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -466,6 +466,10 @@ header h1 {
   letter-spacing: -1px;
 }
 
+header h1 a {
+  color: #fff;
+}
+
 header h2 {
   width: 540px;
   margin-top: 0;
@@ -475,6 +479,10 @@ header h2 {
   line-height: 1.3;
   color: #9ddcff;
   letter-spacing: 0;
+}
+
+header h2 a {
+  color: #9ddcff;
 }
 
 .inner {
