--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -496,9 +496,43 @@ header h2 a {
   margin: 0 auto;
 }
 
+/* Navigation */
+
+.navigation {
+  display: block;
+  height: 2.5em;
+  background: #fbfbfb;
+  text-align: center;
+}
+
+.navigation ul li {
+  display: inline;
+  margin: 0em 0.188em 0em 0.188em;
+}
+
+.navigation ul li a {
+  color: #666;
+  font-size: 1.125em;
+  line-height: 2.5em;
+  padding: 0.563em 0.938em 0.375em 0.983em;
+  transition: background 0.2s;
+  -webkit-transition: background 0.2s;
+}
+
+.navigation ul li a:hover {
+  background: #e2e2e2;
+  border-bottom: 0.188em solid #3c9ce6;
+}
+
+.navigation ul li a.active {
+  border-bottom: 0.188em solid #3c9ce6;
+}
+
+/* Main */
+
 #content-wrapper {
   padding-top: 30px;
-  border-top: solid 1px #fff;
+  border-top: solid 1px #fbfbfb;
 }
 
 #main-content {
