Fix bug: white bordes at the top

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -454,10 +454,15 @@ a:hover {
 /* Navigation */
 
 .navigation {
+  padding: 0;
   display: block;
   height: 2.5em;
   background: #000;
   text-align: center;
+}
+
+.navigation ul {
+  margin: 0px;
 }
 
 .navigation ul li {
