--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -665,11 +665,8 @@ form {
 
 /* Make Shadow on hover */
 
-.games img:hover {
+.shdw-img {
   box-shadow: 0px 0px 7px #888888;
-}
-
-.games img {
   border: 1px solid #505050;
 }
 
