--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -666,8 +666,9 @@ form {
 /* Make Shadow on hover */
 
 .shdw-img {
-  box-shadow: 0px 0px 7px #888888;
+  box-shadow: 4px 6px 7px #888888, 0px 0px 10px #888888;
   border: 1px solid #505050;
+  border-radius: 10px;
 }
 
 /* GENERAL ELEMENT TYPE STYLES */
